Fixed margin overlap & colour gradients

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -11,6 +11,8 @@ body {
 }
 
 .Title {
+  margin-top: 100px;
+  margin-bottom: 0px;
   font-family: "Poppins", sans-serif;
   font-size: 100px;
   text-align: center;
